project-kb/mediacentral/newsroom-management/versions/2021.3/readme.md
---
product: mediacentral-newsroom-management
product-area: newsroom-management
version: "2021.3"
release-date: 01/03/2021
doc-type: readme
source: pdf
confidentiality: public
date-added: 08/05/2026
status: current
---

Version 2021.3 ReadMe Date Revised Changes Made 13 May 2021 Added changes for 2021.3 15 January 2021 Added changes for 2020.9.1 23 September 2020 Added changes for 2020.9 19 April 2020 Added changes for 2020.4 28 January 2020 Added changes for 2019.9.2 12 December 2019 Added changes for 2019.9.1 16 September 2019 Added changes for 2019.9 19 June 2019 Added changes for 2019.6 27 February 2019 Added changes for 2019.2 14 December 2018 Added changes for v2018.11 10 December 2018 Added changes for v2018.9.2 6 October 2018 Added changes for v2018.9.1 22 September 2018 Added changes for v2018.9 27 August 2018 Added change for v2018.6.1 26 July 2018 Added changes for v2018.6 19 December 2017 Added changes for v2017.2 release, inc. product rebranding 16 September 2017 Initial v2017.1 version Avid recommends that you thoroughly read all of the information in this ReadMe file before installing or using any new software release.
Note: Search the Avid Knowledge Base (http://www.avid.com/onlinesupport) for the most up-to-date ReadMe file, which contains the latest information that might have become available after the documentation was published.
This document describes compatibility issues with previous releases, hardware and software requirements, software installation instructions, and summary information on system and memory requirements, when applicable. This document also lists any hardware and/or software limitations.
Version 2021.3 ReadMe Note: Since this release of MediaCentral Newsroom Management will be more widely distributed than previous versions, some notes on important features and changes have been brought forward from previous ReadMe documents. Notes that are less important were not brought forward, and users should reference older iNEWS ReadMe files for additional change information not contained in this ReadMe.
Contents 2019.x ............................................................................................................................................................. 10 2018.x ............................................................................................................................................................. 10 2017.2 ............................................................................................................................................................. 11 2017.1 - Logging Messages ............................................................................................................................. 11 Version 2021.3 ReadMe New Features ....................................................................................................................................................... 12 For MediaCentral | Newsroom Management v2021.3 ...................................................................................... 12 Virtualization ............................................................................................................................................... 12 Server Enhancements ................................................................................................................................... 12 For MediaCentral | Newsroom Management v2020.9 ...................................................................................... 13 MOS Gateway Integration ........................................................................................................................... 14 Grpcheck ..................................................................................................................................................... 14 For MediaCentral | Newsroom Management v2020.4 ...................................................................................... 15 HTTPS Support for MediaCentral ................................................................................................................ 15 Community Reconnect Implementation ....................................................................................................... 15 VID-DUR Field ........................................................................................................................................... 15 New Environment Variables ........................................................................................................................ 15 MOS ............................................................................................................................................................ 15 Increasing Bioserver Cache.......................................................................................................................... 15 For MediaCentral | Newsroom Management v2019.9 ...................................................................................... 15 Multi-Site Support ....................................................................................................................................... 15 Kafka Search Support .................................................................................................................................. 16 Enhanced Server Services ............................................................................................................................ 17 Workstation Improvements .......................................................................................................................... 21 For MediaCentral | Newsroom Management v2019.6 ...................................................................................... 22 For MediaCentral | Newsroom Management v2019.2 ...................................................................................... 23 For MediaCentral | Newsroom Management v2018.11..................................................................................... 23 For MediaCentral | Newsroom Management v2018.6 ...................................................................................... 23 For MediaCentral | Newsroom Management v2017.2 ...................................................................................... 24 iNEWS CTC ................................................................................................................................................ 25 For iNEWS v2017.1 ........................................................................................................................................ 28 iNEWS with Azure ...................................................................................................................................... 28 FTPS Support .............................................................................................................................................. 29 Media | Index Searching .............................................................................................................................. 29 Changes between 2020.9.1 and 2021.3 ................................................................................................................ 29 Changes between 2020.9 and 2020.9.1 ................................................................................................................ 30 Changes between 2020.4 and 2020.9 ................................................................................................................... 30 Changes between 2019.9.2 and 2020.4 ................................................................................................................ 31 Changes between 2019.9.1 and 2019.9.2 ............................................................................................................. 31 Changes between 2019.9 and 2019.9.1 ................................................................................................................ 32 Changes between 2019.6 and 2019.9 ................................................................................................................... 32 Changes between 2019.2 and 2019.6 ................................................................................................................... 32 Version 2021.3 ReadMe Changes between 2018.11 and 2019.2 ................................................................................................................. 33 Changes between 2018.9.2 and 2018.11 .............................................................................................................. 33 Changes between 2018.9.1 and 2018.9.2 ............................................................................................................. 33 Changes between 2018.9 and 2018.9.1 ................................................................................................................ 33 Changes between 2018.6.1 and 2018.9 ................................................................................................................ 33 Documentation Errata for v2018.9 ............................................................................................................... 34 Changes between 2018.6 and 2018.6.1 ................................................................................................................ 34 Changes between 2017.2 and 2018.6 ................................................................................................................... 34 Changes between 2017.1 and 2017.2 ................................................................................................................... 35 Changes between 6.1 and 2017.1 ......................................................................................................................... 35 Microsoft Windows Critical Updates ................................................................................................................... 36 Documentation Errata .......................................................................................................................................... 36 Setup Configuration Guide .............................................................................................................................. 36 Known Issues and Limitations ............................................................................................................................. 36 Data Receiver and Wire Services ..................................................................................................................... 36 iNEWS SendMail ............................................................................................................................................ 36 MAP Story Limit ............................................................................................................................................. 37 CloudUX Integration ....................................................................................................................................... 37 Edit Locks ....................................................................................................................................................... 37 RedHat/CentOS 75 .......................................................................................................................................... 37 Netstation ........................................................................................................................................................ 37 Chinese IME Mode .......................................................................................................................................... 37 Localhost Server .............................................................................................................................................. 37 Console ........................................................................................................................................................... 37 Diskcopy reports CRITICAL error .................................................................................................................. 37 Divehi Support ................................................................................................................................................ 37 Chinese Localization Issue............................................................................................................................... 37 German Localization Issue............................................................................................................................... 37 Local Database ................................................................................................................................................ 38 Windows 7 and Windows 8 with UAC Enabled ............................................................................................... 38 External Users (LDAP) .................................................................................................................................... 38 Plug-ins ........................................................................................................................................................... 38 UNC Paths ....................................................................................................................................................... 39 iNEWS Web Services API ............................................................................................................................... 39 Multiple Monitors ............................................................................................................................................ 40 Macros and Keystrokes .................................................................................................................................... 40 Configure Gmail SMTP Relay Server for Sendmail ............................................................................................. 41 Version 2021.3 ReadMe Install Dependencies ........................................................................................................................................ 41 Generate Gmail Application Password ............................................................................................................. 41 Update sendmail configuration ........................................................................................................................ 41 Modify the AuthInfo File ................................................................................................................................. 42 Technical Support Information ............................................................................................................................ 43 Accessing Online Support ................................................................................................................................ 43 Version 2021.3 ReadMe Updated Security Guidelines As system and network security attacks become increasingly more inventive and persistent, Avid is adopting a new security strategy to help you, our customer and partner, better protect your assets and intellectual property. As you might know, Avid has traditionally recommended Symantec Endpoint Protection as the preferred and qualified solution for much of the Avid product line. As of Q3, 2020, Avid is introducing a more flexible strategy that provides general guidelines for protecting your Avid systems.
This new policy allows you to choose the best security solution for your organization, while still following Avid best practices. Avid expects to release an updated Security Guidelines document sometime in Q4, 2020 that will provide general guidelines for configuring Avid systems with endpoint solutions.
Compatibility Notes and Issues This section contains compatibility information related to the Newsroom Management v2021.3 release or earlier. Specific versions are mentioned when pertinent.
Workstation/Server Compatibility Chart The following chart shows the compatibility matrix for client/server versions of Newsroom Management.
Typically, older client versions can be used to log in to servers of the same or newer versions. However, newer client versions cannot be used to log in to servers with older versions.
Each Column represents Server Versions, while rows represent Client Versions. For information about compatibility with Server Versions earlier than 4.0, please see this chart in ReadMe files for 2019.x version releases or earlier.
A = Allowed | NA = Not Allowed 4.0 4.5/6 4.7 /1 5.0 - 2 5.3 - 6 6.x 2017.x 2018.x 2019.x 2020.x 2021.x iNEWS 3.4/5/6 A A A A A A A A A A A 3.7 A A A A A A A A A A A 4.0 A A A A A A A A A A A 4.5/6 NA A A A A A A A A A A 4.7 /1 NA NA A A A A A A A A A 5.0 - 2 NA NA NA A A A A A A A A 5.3 - 6 NA NA NA NA* A A A A A A A 6.x NA NA NA NA NA* A A A A A A 2017.x NA NA NA NA NA NA A A A A A 2018.x NA NA NA NA NA NA NA A A A A 2019.x NA NA NA NA NA NA NA NA A A A 2020.x NA NA NA NA NA NA NA NA NA A A 2021.x NA NA NA NA NA NA NA NA NA NA A *Note: Due to compatibility issues with a new Clear AIR DATE feature on clients running versions 5.3.x – 5.5.x, these versions are not supported on servers running versions 5.0-5.2 or earlier.
iNEWS Workstation The client software is compatible for use on Windows 10. This version of Newsroom Management is not officially supported for use on any other Windows operating system.
Version 2021.3 ReadMe Newsroom Management Server The Newsroom Management Server (formerly called iNEWS Server) is qualified and supported for use with Red Hat Enterprise Linux 7.7 and 7.9. Avid recommends the servers be kept up-to-date with the latest patch to avoid any vulnerability issues in the Linux kernel. This version of Newsroom Management is also qualified with CentOS 7.7 and 7.9.
MediaCentral | Newsroom Community ∙ In a previous version of iNEWS, the MediaCentral Newsroom Community (formerly called iNEWS Community) communication protocol was modified to allow databases larger than 16GB. This modification broke compatibility with iNEWS Server version 3.4.4 and earlier. iNEWS 3.4.5 still supports Community communication with either iNEWS 3.4.5 or earlier for systems with a small database, but for those with large databases, Community communication is supported only with iNEWS 3.4.5 and later. Both simultaneously are not supported. All 2.x and 3.x servers should be upgraded to at least 3.4.5 when a large database server is added to the community. And when a community includes a 5.x system, any 3.x or earlier should be upgraded to 3.7 and any 4.x systems should be upgraded to 4.7.
Note: The iNEWS 3.7 and iNEWS 4.7 releases support 50 Community members, up from 24. Beginning with iNEWS 6.0, the releases supports 255 Community members, up from 50.
Servers and Operating Systems Compatibility Matrix Note: Not shown in matrix, Windows Server 2019 with Tomcat 7.0 is qualified for WSAPI, and CentOS 7.7 with Tomcat 7.0 is qualified for WSAPI and FileLink server.
Version 2021.3 ReadMe External Users (LDAP) ∙ This version is tested with LDAP TLS.
∙ Beginning with version 4.x, Avid iNEWS server allows user authentication via Windows Active Directory; however, external users are not compatible with the following clients:
∙ iNEWS Workstations earlier than 4.0.0 ∙ FTP clients: teleprompters, NewsCutter’s NRCS Tool ∙ COM clients: NewsCutter's NRCS Tool; Instinct; MOS Gateway's roStorySend and mosObj.
∙ Web Client ∙ Web Access ∙ Interplay Central client earlier than 1.3.0 Fast Text Search Version 4.0.3 or later of Fast Text Search (FTS 4) is required for iNEWS Server version 5.1 and later on both Windows Server 2016 and 2019.
FTS 4 is not supported on any iNEWS Server versions earlier than 3.5. A full re-index is required with an upgrade to FTS 4.
FTS is compatible in a virtualized environment when the guest OS instance meets the application’s minimum system requirements.
Media | Index Avid iNEWS v5.2 or later is compatible for use with Media | Index.
Command The Newsroom Management Server is compatible for use with Command 1.0.1 or later. Command v3.2 is required, however, for proper integration with the iNEWS VID-DURATION feature.
MOS Gateway The Newsroom Management system is compatible with MOS Gateway 2021.3 or later.
Virtualization The Avid Newsroom Management Server software is supported in a virtualized environment. Minimum specifications are provided in the Avid iNEWS Server Enterprise Virtualization Reference Guide for the Newsroom Management Server (iNEWS), the FTS/Data Receiver Server, Command Server, and MOS Gateway Server.
Console Multiplexer The Newsroom Management Server requires version 2.0 of the console multiplexer (MUX) software, which is on the iNEWS installation CD. The console multiplexer cannot currently display Unicode characters. A terminal emulator that supports Unicode characters can be used if Unicode support is required.
Data Receiver The Newsroom Management system is compatible with Data Receiver 1.8 or later. iNEWS 3.0 Server saves data as well-formed XML. Data Receiver SFCs must be updated to deliver well-formed XML. Also, field tags have changed from <f id=TYPE></f> to <string id=”TYPE”></string>.
Version 2021.3 ReadMe Instinct The Newsroom Management system is compatible with Avid Instinct 1.1 and 1.6 or later. After the iNEWS Workstation software is installed on an Instinct computer, manual registration of the Instinct installation’s COM control should be performed: Start > Run > regsvr32 “C:\Program Files\Avid\Avid iNEWS Instinct\iNewsCOMU.dll”.
NewsCutter The Newsroom Management system is compatible with NewsCutter NRCS Tool 6.1.5 or later. After the iNEWS Workstation software is installed on a NewsCutter, manual registration of the NewsCutter installation’s COM control should be performed: Start > Run > regsvr32 “C:\Program Files\Avid\Avid NewsCutter\iNewsCOMU.dll”. If both NewsCutter and Instinct are on the machine, the Instinct COM control should be the one you register.
Downgrade Notes & Issues 2021.3 To downgrade to a previous version from 2021.3 requires the old isam file be restored from backup.
Contact Avid Customer Support for assistance.
2020.9.x and earlier To downgrade server from 2020.9.x, 2020.4, 2019.9.x, 2019.6, 2019.2, 2018.11, 2018.9 or 2018.6, 2017.2 or 2017.1 to 6.1, you must uninstall iNEWS packages manually. Contact Avid Customer Support for assistance. Downgrade from 2020.9.x to 2020.4, 2019.9.x, 2019.6, 2019.2, 2018.11, 2018.9.x and 2017.x is a standard downgrade — after running the downgrade command, you need to delete the file /etc/systemd/system/ iNEWS.service before rebooting the machine.
Install & Upgrade Notes and Issues This section contains information related to upgrading from previous versions of iNEWS.
2021.3 Upgrading to 2021.3 from previous version(s) is a standard upgrade with conversion of the isam files to support the password enhancement. Please see below for a sample of upgrade procedures.
1. The isam file should first be exported from the previous system with:
dbdump Ci -f /tmp/isam_dump
2. Then, after the upgrade, run the following commands:
a. dbgen u b.
dbrestore i -f /tmp/isam_dump Note: After the upgrade, you need to create credentials for txnet jobs with vaultctl. Please see “Server Enhancements” in the New Features section of this ReadMe for more details.
2020.9.x Upgrading to 2020.9.x from previous version(s) is a standard upgrade.
2020.4 Upgrading to 2020.4 from previous version(s) is a standard upgrade.
Note: For iNEWS CTC, multiple CTC instances should be on the server to provide load and redundancy support. Avid recommends running up to #cores -2 instances. Please see the CTMS Integration chapter of the Setup Configuration Guide for more information.
Version 2021.3 ReadMe Beginning with v2020.4, Newsroom Management features HTTPS support for both Kafka and MediaCentral searches (v2019.9.5 or later). However, after upgrading to v2020.4, the previous version of the Kafka story should be removed and the mediaindex service restarted.
2019.x Upgrading to 2019.x from previous version(s) is a standard upgrade.
2018.x A database conversion is required for upgrades from version 2017.2 to 2018.6 (or later).
∙ Prior to upgrading the iNEWS software, execute the dbdump command on the server to make a copy of the database. For instance:
#dbdump Cv -f + |gzip > /tmp/wavd.dbdump.gz To upgrade a single server A system, follow these steps to convert a Newsroom Management v2017.2 database to v2018.6 (or later).
Note: For dual-server systems, do the conversion for server A first, then repeat the procedure for server B.
1. Navigate the directories and install server portion, use WinSCP to move the install script over to the
server. You will need target server, root access. Place the files in /home/so directory.
# cd /home/so/<install folder>/linux In case server is not connected to the internet, put OS ISO next to install script.
2. Take server offline, logout session, and close the database by issuing the following commands:
# offline # logout all # shutdown (say "yes" to prompt) # reboot
3. Log back into PUTTY as the SO user.
4. Navigate to install folder and start installation.
# cd /home/so/<install folder>/linux # ./install upgrade # reboot (remote session to the server will end)
5. Log back into PUTTY as the SO user, and update dictionary.
# dictionary -update /site/dict # dictionary -update /site/web
6. Switch to super user and execute:
# maketab –i # makemontab –i
7. Reconnect iNEWS disks (This command differs depending on which server configuration you are
connecting) # connect a net=a
8. Look for a valid output like this response:
Post output:
Connect successful for WAVD-A, starting servers...
Performing user added commands (/site/exc/connect.sh) Starting iNEWS Web Access Service.
Version 2021.3 ReadMe A is OFFLINE. ID is WAVD.
System is A. Master is A.
9. Clear and initialize the database on the server by issuing the following commands:
# finit – # dbgen –
10. Restore the database on the server by issuing the dbrestore command to place database onto a clean
system.
# gunzip < /tmp/wavd.dbdump.gz | dbrestore dpixv -f + -i –M Starting: Dump(1) Block(0), dumped on 2018-06-19 16:08:15 Dumped by 6.3.1.8 RH7 Ok to do user? (y/n) y Ok to do user blobs? (y/n) y Ok to do message? (y/n) y Ok to do group? (y/n) y Ok to do system-blobs? (y/n) y Ok to do community? (y/n) y Project cd67eeb7-eb0c-47e9-a3e6-9ec34f542415 test Elapsed time: 0:26
11. Startup system normally and bring the database back online.
# startup
12. Install Newsroom Management 7.0 client and log into the server as normal.
2017.2 To upgrade from previous versions to 2017.2, go to the folder with installer script and run command:
./install upgrade Note: Verify that install file is executable, otherwise run the following command with root permission: chmod +x install 2017.1 - Logging Messages After moving to rpm installer, configuration for logging was moved from /etc/rsyslog.conf file to /etc/rsyslog.d/00-iNEWS.conf.
To avoid messages being duplicated in the iNEWS log file of an upgraded system, the /etc/rsyslog.conf file must be edited and the following lines removed:
# Log iNEWS messages local0,local1,local2,local3,local4,local5,local6.*/var/log/iNEWS/iNEWS.
log # Display iNEWS messages on local and serial consoles local0,local1,local2,local3,local4,local5,local6.* /dev/console Version 2021.3 ReadMe New Features This section contains a listing of new features.
For MediaCentral | Newsroom Management v2021.3 Version 2021.3 offers the following enhancements:
∙ This version is qualified for CentOS/RHEL 7.9.
∙ This version increases maximum limit for user passwords to 250 characters.
Virtualization ∙ In a virtual environment, disks must have the ID_SERIAL property before installation of Newsroom Management, or it will abort. Please see the updated MediaCentral Newsroom Management Server Enterprise Virtualization Reference Guide for procedures on checking for the ID_SERIAL property and for enabling disk UUID on a virtual machine. IN-6740 Note: This setting is not required if VM is a single disk installation, and if rp5 and rp5backup partitions are created as part of OS setup possess.
Server Enhancements ∙ A new option (+X) is added to dblines to fix duplicate qstamps within the queue. (IN-6310) Usage: dblines [bcfnqsvwx +D -O -P +X] <pathname> For information on the other usage options of dblines, see Appendix A in the MediaCentral Newsroom Version 2021.3 ReadMe Management Setup and Configuration Guide.
∙ Last login time for MCCUX user is now updated (IN-6546) ∙ Installer is updated to address issue with startup dependencies. (IN-6501) ∙ Enhance “startup” and “shutdown” utility to start/stop rxnet-socket. (IN-6492) ∙ The user credentials for txnet is now stored more securely on the server. A new utility “vaultctl” enables a user to maintain credentials used by txnet.
Usage: vaultctl [OPTION...] command [arg...] Option Name Description -p Password Set password from command line.
-v Verbose Print diagnostic information.
-? Help/Usage Give this help list and short usage message.
Command Option Description list List credentials.
add Add or replace credentials pair.
delete Delete credentials pair.
sync Re-sync credentials between servers in system.
∙ Another new utility “configcheck” is available to verify if txnet credentials are created for all of the existing txnet jobs.
Usage: configcheck [OPTION...] Option Name Description -A All Check all configuration files.
-t txnet Check txnet configuration files.
-? Help/Usage Give this help list and short usage message.
NOTE: The option -t only checks the beginning of “open” lines in txnet job, checks if the user account exists in the vault, and checks whether or not any difference in the vault file between servers is validated.
For MediaCentral | Newsroom Management v2020.9 Version 2020.9 offers the following enhancements:
∙ Improved queue access through CTC with newer interface and libraries.
∙ Improved speed of disk-heavy utilities. Specifically, the Dbvisit utility was updated to include a switch to skip the traversal of the UUID table.
∙ Improved the Dbgen utility to allow for a new flag to generate the uuid file.
∙ GJAVASESSIONTIMEOUT (=mm:ss) Introduced a new environment variable to allow the system to logout old style MediaCentral clients that do not use the localtimeout variable.
Version 2021.3 ReadMe ∙ Improved system functionality when a story save failure occurs. Now, that story is backed up to the user’s destination queue instead of the DEAD queue to which most users do not have access.
MOS Gateway Integration ∙ This version of Newsroom Management required MOS Gateway 2020.9 ∙ Improved integration between Newsroom Management and MOS Gateway by replacing iNEWSCOM with FTP/FTPS. For more information, see the MOS Gateway ReadMe 2020.9.
Grpcheck ∙ In this version “grpcheck” is modified to use scp (secure copy) instead of the rcp command. In case of multi-server systems (such AB or ABC), every time an administrator runs grpcheck on the master, the root password is requested for the files being copied from master A to slave B/C servers.
To avoid this, you have two options:
∙ Let installer update configuration during upgrade (See Upgrade with Installer below.) ∙ Change files manually after regular upgrade (See Manual Change below.) Upgrade with Installer:
1) In case of iNEWS-server upgrade, customers should create a configuration file manually or using a clean install. If a configuration file exists, the following lines should be added into it:
CONFIG_SYSTEM_A_REMOTE_SO_PASSWORD="<remote_a_system_so_password>" CONFIG_SYSTEM_B_REMOTE_SO_PASSWORD="<remote_b_system_so_password>" CONFIG_SYSTEM_C_REMOTE_SO_PASSWORD="<remote_c_system_so_password>" 2) Server upgrade should be run this way:
./install upgrade -c <path_to_configuration_file> Manual Change:
There is a possibility of having to configure the SSH service manually if it was not done during a Newsroom Management Server installation or upgrade.
∙ Generate ssh key:
ssh-keygen -t rsa -b 4096 -N '' -f path_to_home_directory/.ssh/id_rsa If the ssh-key already exists, do not overwrite it.
∙ Distribute ssh key:
HOME_VAL=$HOME; HOME=path_to_home_directory; ssh-copy-id so@<remote_machine_ipaddress>; HOME=$HOME_VAL The path_to_home_directory is:
∙ /home/so for 'so' user ∙ for 'root' user /root Version 2021.3 ReadMe For MediaCentral | Newsroom Management v2020.4 HTTPS Support for MediaCentral ∙ With regards Search HTTP authentication, which was introduced in MediaCentral Cloud UX v2019.9.5, organizations integrating with MediaCentral Newsroom Management need address the following:
o When using Newsroom Management v2019.6 or earlier, the authentication must be disabled on MediaCentral Cloud UX side.
o When using Newsroom Management v2019.9 with the Search HTTP Interface instead of Kafka, the authentication must be disabled on MediaCentral Cloud UX side.
Community Reconnect Implementation ∙ Beginning with this version, iNEWS workstations are now notified about community disconnects by the server so it tries to re-establish connection and if that fails then the message "Lost connection to community system <community system name>" is displayed.
VID-DUR Field ∙ In this version, the Newsroom Management server was enhanced to extract video duration information from within the story body and populate the VID-DUR field in Composite and Device-Event queues.
New Environment Variables ∙ Client logging has been enhanced with addition of new variable, EnableLogging. For more information, see Appendix D of the MediaCentral Newsroom Management Setup and Configuration Guide.
∙ Timed action servers are enhanced with addition of new variable, RESTARTDURINGPOLLINGPERIOD, so that changes are immediately applied. For more information on settings, see Appendix D of the MediaCentral Newsroom Management Setup and Configuration Guide.
∙ TXNET connectivity is enhanced with additional variable:
o TXDCKEEPALIVE, is available so that a “keep alive” test message is sent at configurable intervals to maintain TXNET data channel connectivity.
o Additional variable introduced to set port range for rxnet connection. Format is RXDATAPORTRANGE=<low port>..<high port> For example, RXDATAPORTRANGE=10000..10010 For more information, see Appendix D of the MediaCentral Newsroom Management Setup and Configuration Guide.
∙ Story UUID support has been added for MediaCentral and Kafka indexes. For more information, see W_INDEX_STORYUUID in the Words Dictionary /site/dict/words section of Appendix C in the MediaCentral Newsroom Management Setup and Configuration Guide.
MOS ∙ Also new to this version, size checking of mos objects that are drag-and-dropped into stories is now done to ensure the size does not exceed what is supported by the monitor server.
∙ A new field called the MOS-objID field is added to capture the information in the <mosobjid> tag from MOS communication.
Increasing Bioserver Cache The requests loading the CTCs are often to the same queues—typically the current rundown. Increasing the bioserver can increase the cache hit ratio for blocks there by improving performance. For instructions on how to increase the cache, see “Increasing Bioserver Cache” in Chapter 20 of the MediaCentral Newsroom Management Setup and Configuration Guide.
For MediaCentral | Newsroom Management v2019.9 Multi-Site Support ∙ This version of Newsroom Management Server now supports multi-site connectivity.
Version 2021.3 ReadMe Previously, as shown in the following diagram, a MediaCentral CloudUX client could only connect to the Newsroom Management Server if corresponding inewsctc files were configured on the Newsroom Management Server.
Now, CloudUX clients can access a Newsroom Management Server that is connected to the remote MediaCentral server through MediaCentral multi-site connections, as shown in the following diagram:
To achieve this integration, the entry ENABLE_REMOTE_AVAILABILITY=1 must be added to the inewsctc file for the MediaCentral server that is making the connection.
Kafka Search Support ∙ This version of Newsroom Management Server now supports the new Kafka Search for multi-site environments. With this implementation:
o The Search Agent writes to a Kafka queue (of the same CloudUX) instead of the Search queue.
o Local Search reads from the Kafka queue.
Version 2021.3 ReadMe o Remote Search will also read from the Kafka queue if the Newsroom Management system is linked to CloudUX.
o Other CloudUX clients will be able to search content on the Newsroom Management system.
For Kafka configuration, the Kafka queue (SYSTEM.SCHEMAS.KAFKA) must be created manually.
Also, to use this search, there are two settings in /site/dict/words that must be adjusted as follows:
• W_SEARCHTYPE /kafka • W_MCS_BASE_URL /https://<CloudUX name>:<port optional> Enhanced Server Services ∙ This version features some server services improvements with the introduction of Systemd to help maintain the services on the server thereby improving availability of the services running on the server. All services managed by systemd may be configured to restart automatically if they crash or exit abnormally. This feature is enabled for all Newsroom Management servers except bioserver.
Also, with the watchdog functionality, administrators can monitor and restart hung servers when they do not send a heartbeat. At present, watchdog is used on workserver, inewsctc, mediaindex and ftsindex.
To use systemd, some changes are necessary.
o Bioserver was previously managed by the upstart service manager in RHEL and the service file was in /etc/init.d/iNEWS. Now however, Bioserver is managed by the systemd service manager and the service file is located at:
/usr/lib/systemd/system/inews-bioserver.service.
service This service file also creates an alias iNEWS.service, so it can be managed by the command as before.
Bioserver service does not support auto-restart because it should be manually connected and configured after startup.
Note: If you start inews-bioserver.service, systemd will not start any of those services automatically. If you stop inews-bioserver.service, systemd will stop all services that binds to it—that is, all servers except user sessions.
Version 2021.3 ReadMe To start or stop bioserver, use one of the following commands:
systemctl start/stop inews-bioserver.service systemctl start/stop inews.service service inews start/stop When you stop inews-bioserver.service, it will kill any dependent servers (i.e. dbserver, workserver, NewsWeb.fcgi) identified via the systemd dependency mechanism.
o Connect/Reconnect procedure: connect/reconnect utilities have the same command line interface, no change to parameter list. Below is a list of system units for processes run by connect/reconnect:
o Startup procedure: Startup/boot utilities have the same command line interface, with no change to parameter list. Below is a list of system units for processes run by startup/boot: (All of the following services depend on inews-bioserver.service, so the cannot be run without it.) o Start/stop/restart utilities were slightly modified: The -f flag was removed because systemd forcibly kills the process if it does not stop after 90 seconds.
o The rxnet/ismessage/nxserver/tftp servers work differently than other utility programs. These servers require socket activation manager, such as xinetd or systemd. For systemd, there are two types of files to describe such service:
- socket – defines what port and protocol to use - service – describes how to run process to communicate with client.
Version 2021.3 ReadMe All of these servers, except tftp, also requires the inews-bioserver.service.
o Rxnet custom configuration To configure rxnet with custom configuration:
1. Go to /usr/lib/systemd/system folder and copy two files: inews-rxnet.socket and
inews-rxnet@service, for example:
# cd /usr/lib/systemd/system # cp inews-rxnet.socket inews-rxnet-nsml2.socket # cp inews-rxnet@.service inews-rxnet-nsml2@.service
2. Edit both inews-rxnet.socket and inews-rxnet-nsml2.socket files and add ReusePort=true to
the [Socket] section if you plan to use both original rxnet and custom one.
3. Also in inews-rxnet.socket and inews-rxnet-nsml2.socket, specify ip addresses of different
network interfaces to listen for connections, for example:
#nano inews-rxnet.socket [Socket] Accept=true ReusePort=true ListenStream=172.22.193.80:21 #nano inews-rxnet-nsml2.socket [Socket] Accept=true ReusePort=true ListenStream=172.22.202.81:21 Or:
#nano inews-rxnet.socket [Socket] Accept=true ReusePort=true ListenStream=0.0.0.0:21 BindToDevice=ens160 #nano inews-rxnet-nsml2.socket [Socket] Accept=true ReusePort=true ListenStream=0.0.0.0:21 BindToAddress=ens192
4. Edit inews-rxnet-nsml2@.service file to add custom configuration options, such as:
[Service] Type=simple Environment=PATH=/exc:/sbin:/bin:/usr/sbin:/usr/bin ExecStart=/exc/rxnet -e /site/env/rxnet-nsml2 StandardInput=socket StandardOutput=socket Version 2021.3 ReadMe StandardError=syslog Slice=inews-servers.slice
5. Lastly, run systemctl daemon-reload command then stop and start inews-rxnet.socket and
inews-rxnet-nsml2.socket # systemctl daemon-reload # systemctl stop inews-rxnet.socket # systemctl stop inews-rxnet-nsml2.socket # systemctl start inews-rxnet.socket # systemctl start inews-rxnet-nsml2.socket o Additional commands: Get status of service.
Get statuses of all services.
Version 2021.3 ReadMe Workstation Improvements ∙ A new option has been added to allow users to change the size of the Show Timing Clock.
To adjust the size:
1. Select Format > Clock Size. The Clock Size dialog box opens.
2. Select the size.
3. Click OK. The following image shows a clock enlarged to the selected size.
This version adds a new toolbar to display the name of the active queue. For instance, the following image shows the toolbar next to the Show Timing Clock.
To view the Queue Path toolbar:
∙ Select View > Queue Path.
The font type and size, used by the toolbar, are customizable.
To customize the Queue Path toolbar:
1. Click on the toolbar.
2. Select Format > Font. You can adjust both font type and font size.
Note: Toolbar settings are saved to the workstation’s registry and not to the user’s profile.
Version 2021.3 ReadMe For MediaCentral | Newsroom Management v2019.6 ∙ This version introduces a new environment variable for inewsctc, called CTCDEBUG. Options include: trace, debug, info, warning, error. The default value is trace ∙ This version of Newsroom Management offers two new local print options for defining print styles.
Option Parameter Value Description WinAutoPageBreak Yes | No Specifies whether to print with the optional story preview, while making sure the page break is enforced so to avoid having a story start on a page below another story causing the second story to continue to a second page.
Default is Yes.
WinColorScript Yes | No Specifies whether to use color printing in the script printouts. If enabled, colored text is used instead of shading; closed captioning, presenter instructions, and machine control instructions are printed in green, red, and blue respectively. Default is NO.
∙ The AIWS session has been re-instantiated to allow the NRCS tool to connect to Newsroom Management. It must be added to /site/config, in two places, such as in the Host section:
reslist 711:712 ; Instinct AIWS (NRCS tool) sessions And in a Instinct (AIWS) Sessions section:
aiws 711 - gnews - ; Instinct (NRCS tool) session aiws 712 - gnews - ; Instinct (NRCS tool) session Note: Run the workdebug stat command, and the NRCS tool session will show up as AII (Avid Interplay Instinct), such as:
Run the list command, and any user logged into Newsroom Management from the NRCS tool will appear as an AIWS session, such as:
A711 avstar A 04-02 12:27:09 [12417] ∙ This version features improved support for HTML5 plugins. Previously, Newsroom Management only supported base URL for plugins. This version now supports parameters in the URL for plugins.
∙ The calendar in Newsroom Management now honors the First Day of the Week Calendar setting of the Windows-based workstation on which it is running.
∙ The numbering scheme, in the PAGE column of a rundown queue, for grouped stories is now configurable. You would need to run maketab -i at the server for any changes to the dictionaries files to take effect. Previously, the format was a three-digit, alphanumeric value of the group followed by a hyphen as a separator and a letter for each story. For example: C01-A, C01-B, C01-C… C02-A, and so forth. Beginning with this version of Newsroom Management, the separator and story enumerator may be customized by defining two new words in site/dict/words:
Standard Name Translation W_GSEPARATOR /- (A hyphen is default behavior.) /. (A period is an alternative, acceptable separator) W_GENUMERATOR /A (Alphabetic value is the default behavior) Other acceptable values include:
/# (Numeric value with no zero padding) Version 2021.3 ReadMe Standard Name Translation /## (Numeric value with one padding zero) /### (Numeric value with two padding zeros) The behavior as shown in the previous example is based on the following defined translation values:
W_GSEPARATOR /- and W_GENUMERATOR /A However, custom values of W_GSEPARATOR /. and W_GENUMERATOR /## would enable group story numbering such as: C01.01, C01.02, C01.03 … C02.01, and so forth.
For MediaCentral | Newsroom Management v2019.2 ∙ This version provides new support for the Maestro HTML5 MOS plugin. For more information, see the HTML5 Plugins in the MediaCentral | Newsroom Management Setup Configuration Guide.
For MediaCentral | Newsroom Management v2018.11 ∙ This version provides a new wire profile option, called join, for Data Receiver updates. For more information, see “Adding a Wire – Data Receiver” and “Wire Profile Options” in the MediaCentral | Newsroom Management Setup Configuration Guide.
∙ Also supported is /site/config session for a Data Receiver wireserver as shown in the sample /site/config file in Appendix B of the MediaCentral | Newsroom Management Setup Configuration Guide.
∙ Starting from this version, we support custom fields in Media Central Search.
∙ iNEWS CTC supports new notifications for stories, queues, and folders with a richer set of information. To receive these notifications for changes on all servers (A/B/C), an iNEWS CTC needs to be configured on each of the servers.
Note: For performance reasons changes by monitor will not result notifications.
For MediaCentral | Newsroom Management v2018.6 ∙ This version introduces HTTPS support for file linking. For more information, see Chapter 18 on “File Linking” in the MediaCentral | Newsroom Management Setup Configuration Guide, and also the TomcatInstallFileLink.pdf that comes with the new upgrade/install files.
∙ This version supports expanded centralized indexed searches from MediaCentral | Cloud UX integration by sending data for indexing to MediaCentral | Search. For more information, see Chapter 19 on “Central Indexing” in the MediaCentral | Newsroom Management Setup Configuration Guide.
∙ This version provides network recovery when the iNEWS Workstation loses connection to the network.
Now, users will receive a dialog box (above) informing them of the issue, giving them the option to reconnect, and after that, giving them the option to restore backed-up stories (below).
Version 2021.3 ReadMe ∙ WSAPI is now qualified to run under Windows Server 2016 with Tomcat server version 7.0 and Java version 8.
∙ New UID for production cues in NSML: This improvement assigns a new attribute uid to each of the production cues. It helps automation to better maintain machine control for changes; with the uid, production cues can be tracked for changes.
∙ The Chromium engine was updated for this release.
∙ This release introducing a new Licensing Agent that handles all types of sessions and license counting, allowing for a single, combined licensing façade. IN-3448 ∙ This version provides a new environment variable USE_AUTHENTICATION_BY_IP=0/1 that enables service to be configured to authenticate with MCUX or MCCUX server for inewsctc connection.
For MediaCentral | Newsroom Management v2017.2 ∙ In this version of RXNET, you could add a system variable to control the port range used for connections. This is important if ports in the firewall need to be opened.
Syntax: RXDATAPORTRANGE=<low port>..<high port> Example: RXDATAPORTRANGE=10000..10010 If environment variable is not present or format is wrong then random port is opened for connection the minimum amount of ports must at least the number of sessions configured in /site/config file of rxnet server, trying to connect with additional session will result in failures. Please see the latest FTP/FTPS documentation for further information.
∙ This version also has enhancements related to Central Index, such as custom fields from NSML, grouping, and improved labels. IN-3092 ∙ In this version, a UUIDtraits utility - checkpoint online flag is added.
RH73-A# uuidtraits Usage:
UUID :search value(path, stamp) by UUID -s UUID :search story(file id) by UUID -c :check integrity, and show issues -f :fix founded integrity issues -o :use checkpoint partition while checking or fixing issues -p :print entire UUID table Uuidtraits utility online Version 2021.3 ReadMe iNEWS CTC ∙ Beginning with this version, inewsctc can connect to multiple MediaCentral systems. IN-3094 In previous versions, MediaCentral system had the settings in /site/dict/words file as follows:
Please remove the settings – leave W_ACS_GATEWAY_HOST & W_ACS_GATEWAY_PORT as they are also used for media index functionality.
Starting this version, settings are in the inewsctc files under /site/env, as shown:
For each MediaCentral connection, you need to configure individual inewsctc files.
Version 2021.3 ReadMe Verify there are multiple resources configured for inewsctc in /site/config file.
Version 2021.3 ReadMe Note: Logs are recorded per service now and can be found in /var/log/iNEWS folder.
Version 2021.3 ReadMe For iNEWS v2017.1 iNEWS with Azure This version of iNEWS supports integration with Microsoft Azure. Avid iNEWS in Azure is a hybrid deployment that means some services will run on virtual machines in Azure while others will run on premise, upon your choice either virtualized or on hardware. For more information, please see iNEWS NRCS with Microsoft Azure Integration Guide.
Version 2021.3 ReadMe FTPS Support This version of iNEWS adds FTP over SSL support. For more information, see the iNEWS FTP/FTPS server Protocol Specification document.
Media | Index Searching This version of iNEWS supports searching custom iNEWS metadata via Media Index, using a central index. To be able to search on custom fields, a re-index is required. For more information, see the Media | Index Integration chapter of the Avid iNEWS Setup Configuration Guide.
Changes between 2020.9.1 and 2021.3 ∙ Previously, since version 2020.9, MOS attachment attributes were modified incorrectly for roStorySend stories. This is fixed now. IN-6857 ∙ Previously, when using iNEWS Webservices to search, sometimes no results were returned, and it went into timeout for 15 minutes. This is fixed with WSAPI 1.6.2. (IN-6744) ∙ After the reboot of a system and after running the connect command, Newsroom Management would sometimes show dependency messages that said that some services failed to start. This is fixed. IN-6436 ∙ Previously, some unlocked stories were indexed even if the queue they were in was locked, and this could prevent users from being able to open the queue. This is fixed. IN-4099 ∙ Previously, if the QueueForm of a queue is mis-configured, the Queue Panel would not display any fields in Newsroom Management, like it did in older versions of iNEWS. This is fixed. IN-6359 ∙ Previously, users experienced FTPS connection issues with the Newsroom Management database when using IE browser. This is fixed. IN-6363 ∙ Previously, beginning in versions 2020.4, queue names with Danish characters could no longer be navigated correctly via rxnet. This is fixed. IN-6393 ∙ Beginning in 2019.9.1 and later, the inews-dbserver.service start operation would time out, terminate, and fail to restart. This is fixed. IN-6395 ∙ Previously, under certain workflows, the retrieval of a story from an Update queue using an FTP client would fail. This is fixed. IN-6465 ∙ In a previous version, failed messages might appear after an RXNET timeout. This is fixed. IN-6544 ∙ In a previous version, failed messages might appear after commands were manually stopped on the RXNET server. IN-6572 ∙ Previously, FTPS-enabled connection would retain a mosreplication user session and not relinquish it. This is fixed. IN-6578 ∙ Previously, the Create New Story option in the Rundown App would not insert stories in proper placement within an inverted or sorted queue. This is fixed. IN-6641 ∙ Previously when searching with media index, the slug would be not story title if it is not set as the quick index field. It is fixed. IN-6649 ∙ Previously, the sync agent might become stuck in a loop while processing a media-index queue. This is fixed. IN-6697 ∙ Previously, the mos-duration information is not pulled into the events queue to update total time. This is fixed. IN-6707 ∙ Previously, some stories could not be locked in a community server. This is fixed. IN-6741 ∙ Previously, rxnet sessions were not removed from indexes (T/U) if the connection was broken. This is fixed. IN-6354 ∙ In previous versions 2020.4 and 2020.9, the “style NO" setting in the CG device line of the MAP story entry for Command would result in an error in MCS dictionary entry, which was sent to the user who turned on the monitor. This is fixed. IN-6431 ∙ Previously, when floating or unfloating stories with a large Maestro (MOS item) attachment, the monitor server would crash. This is fixed. IN-6786 ∙ Previously, if a system was configured with three servers in SYSTEM.MAP, the monitor server might crash. This is fixed. IN-6784 Version 2021.3 ReadMe Changes between 2020.9 and 2020.9.1 ∙ In previous version, Save Story and Unlock Story will not move story into destination queue via action server when editing story in Rundown Application while logging in to the server from CloudUX application. This is fixed now. IN-6576 Changes between 2020.4 and 2020.9 ∙ In previous versions, iNEWS CTC would frequently and unexpectedly disconnect from CloudUX. This is fixed in this version by improving queue access through CTC with newer interface and libraries. IN-6094 ∙ Previously, JAVA client did not release Newsroom Management sessions when the user closed the browser instead of logging out. This is fixed. IN-6140 ∙ In previous versions, iNEWS client could terminate on opening stories containing text copied from a Web page (URL unknown) and pasted into a news story using the Rundown app in MediaCentral Cloud UX.
This is fixed. IN-6272 ∙ In previous versions, channel change for clips made in Newsroom Management did not always take or changed back. This is fixed. IN-5319 ∙ Previously, a GET queue request returned a 404 Not Found error if there was no SYSTEM.MAP queue in the database. This is fixed. IN-6090 ∙ In previous versions, a channel to which the graphic was assigned with mosItemReplace message disappeared from the production cue. This is fixed. IN-6148, IN-6179 ∙ Previously, the form field would not be cleared after deleting a channel from MOS device playlist. This is fixed. IN-6179 ∙ Previously, frequent hourglass delays, some of which lasted 2 to 4 seconds, in refresh rundowns with a large number of stories could cause disruption to editing and production operations. This is fixed. IN-6248 ∙ Previously, monitor did not update the Channel column in a mosItemReplace workflow. This if fixed. IN- ∙ Previously, users might encounter a significant hourglass delay after selecting many stories in the Queue panel and then clicking on the Context menu option. This is fixed. IN-6242 ∙ Previously, users might encounter a significant hourglass delay after selecting many stories in the Queue panel and then clicking on the Story menu option. This is fixed. IN-6186 ∙ Previously, running mapcheck from the console might cause a segmentation fault. This is fixed. IN-6222 ∙ Previously, the mediaindex service would terminate after a restart, even if there were no errors in configuration. IN-6220 ∙ In previous versions, MAM communication with Newsroom Management was interrupted, producing "Error connecting to [iNEWS SYSTEM], connection was aborted" message in the WSAPI logs. This is fixed now. IN-6203 ∙ In the previous version, Cyrillic and Georgian fonts were not displaying correctly in Command. This is fixed. IN-6271 ∙ In a previous version, the client would hang on startup and the gnew session exited upon reading stories in SYSTEM.HTML-PLUGINS. This is fixed. IN-6275 ∙ In previous versions, list s-v output didn't display the remote client IP address nor system name for connections to RXNET devices. This is fixed. IN-6319 ∙ In the previous version, starting in a saved session or loading a session may change the Clock size for all users who log into the same iNEWS workstation PC. This is fixed. IN-6331 ∙ Previously, the monitor server would sometimes exit unexpectedly when mosItemReplace processes were deferred. This is fixed. IN-6804, IN-6396 ∙ In a previous version, the monitor server would randomly, but frequently, go into a state where status messages would no longer reach the iNEWS workstations, and modifications to the rundown would not get transmitted to Command. This is fixed. IN-6396, IN-6804 ∙ After upgrading to v2020.4, some sites experienced brief periods when users would be unable to log in.
This is fixed. IN-6785 ∙ Previously, if a system was configured with three servers in SYSTEM.MAP, the monitor server might crash. This is fixed. IN-6784 ∙ Previously, unfloating the first story in a playlist would cause the monitor server to crash. This is fixed. IN- Version 2021.3 ReadMe Changes between 2019.9.2 and 2020.4 ∙ Previously, iNEWS workstations crashed intermittently, especially on machines with Maestro plugins. This is fixed. IN-5346/IN-5402 ∙ In previous versions, inewsctc could accumulate memory usage with the number of requests, this is fixed now. IN-5497 ∙ News stories in Cloud UX created using Chinese characters might not appear in the queue until after logout/login. This is fixed. IN-5558 ∙ The iNEWS CTC seemed to consume a lot of RAM, but it was only because the service retains the memory for further use to decrease fragmentation; it releases RAM if the operating system requests it to do so.
Please see Chapter 20 – CTMS Integration in the MediaCentral Newsroom Management Setup and Configuration Guide for instructions on how to limit memory allocation. IN-5799 ∙ In a previous version, saving a story to a local server failed if the community session in another workspace was not available anymore. This is fixed now. IN-5892 ∙ In a previous version, a story’s edit lock was not auto-renewed if another story was edit-locked in a second workspace. This is fixed. IN-5893 ∙ Previously, after saving a story using TXNET/RXNET, the “S” sequence would be missing from the story.
This is fixed. IN-5451 ∙ After the reboot of a system and after running the connect command, Newsroom Management would sometimes show dependency messages that said that some services failed to start. This is fixed. IN-5657 ∙ In previous versions, if requested story form contained a reference to an absent list/form in the SYSTEM directory, iNEWS CTC responded with a “404 not found” error. This is fixed, so that the story form is returned with an empty list. IN-5670 ∙ Following upgrades to 2018.11.x, some sites with firewalls set to close socket connections after a period of inactivity resulted in TXNET/RXNET connection issues. This is fixed with additional environment variables, documented here and in Appendix D of the MediaCentral Newsroom Management Setup and Configuration Guide. IN-5732 o RXDATAPORTRANGE=<low port>..<high port> For example, RXDATAPORTRANGE=10000..10010 Additional variable introduced to set port range for rxnet connection. If environment variable is not present or format is wrong, then a random port is opened for connection. The minimum amount of ports must be at least the number of sessions configured in /site/config file for the rxnet server.
o TXDCKEEPALIVE=<0|20> The “keep alive” interval option should be configured for TXNET data channel so that 3 missed packages triggers a channel close. When TXDCKEEPALIVE=0 is set in /site/env/txnet, it is disabled.
The minimum value is 20 seconds, and the recommended setting is at least half the time interval set for firewall timeout.
∙ Previously, RXNET would open the database if it was closed when an FTP client attempted to connect to an offline server, resulting in an inability to run ONLINE commands. This is fixed. IN-5839 ∙ In previous versions, iNEWS Workstations following Show Timing did not always update with the sync timing of the controlling workstation. This is fixed. IN-5851 ∙ In previous versions, the client software might terminate when localtimeout expired and there was a field data warning dialogue open. This is fixed. IN-5450.
∙ In previous versions, there were issues related to losing stories out of iNEWS. This is fixed. IN-5852 Changes between 2019.9.1 and 2019.9.2 ∙ In previous versions, sometimes the MOS item would be removed when saving the story with the MediaCentral Cloud UX Rundown app. This is fixed. IN-5768 ∙ In previous versions, sometimes user would get a message “Failed to save story and release edit lock” when saving a story using the Rundown app. This is due to the timeout of the storylock and the rundown app did not refresh the lock. This fix requires an update to MediaCentral | Cloud UX 2019.9.6 or later.
IN-5769, MA-5024 ∙ In previous versions, saving a story with “modify-dev” field in the Rundown app will cause inewsctc to crash. This is fixed. IN-5771 Version 2021.3 ReadMe ∙ In previous versions, users would get an error when saving stories using the Rundown app in a queue with action job configured. This was because the story was not created with storylock and was moved before it was saved. This is fixed with new API added to inewsctc to enable creation of story with editlock. This fix requires an update to MediaCentral | Cloud UX 2019.9.10 or later. IN-5770, MA-5526 Changes between 2019.9 and 2019.9.1 ∙ In some previous versions, the production cue disappears if you put the insertion point to the immediate left of the production cue grommet, click N, P or CC, and save. This is fixed. IN-5727 ∙ Previously in some workflows, the assigned channel would be cleared after monitor was loaded. This is fixed. IN-5652 ∙ Previously, “renumber all” did not provide unique page numbers to stories when the queue contained BREAK stories. This is fixed. IN-5607 ∙ Previously, the story group indicator would disappear when the user changed the queue form of the current viewing queue. This is fixed. IN-5566 Changes between 2019.6 and 2019.9 ∙ Previously, a user with Newsroom Management credentials on a Windows command line FTP client could still log in to the news database when the system was offline. This is fixed. IN-5454 ∙ Previously, action server would crash, producing a core image file, when the joblist was modified and saved in the database. This is fixed. IN-5202 ∙ Previously, bioserver might disconnects on an ABC system, which would result in incorrect system types.
For instance, an ABC system where A and B would disconnect from each other while retaining a connection to C would result in types: AC on A, BC on B, and ABC on C. This is fixed. IN-169213 ∙ Previously, after loading a playlist to Command, the monitor server on the Newsroom Management system would terminate with an ‘out of memory’ error, causing the rundown to be out of sync with the playlist and preventing users from deleting the playlist. This is fixed. IN-4800 ∙ Previously, the monitor server terminated when receiving an update to a story with a large MOS attachment for Maestro which exceeds its size limit. This is fixed. IN-5110 Note: Monitor would skip sending any attachment to Command that is larger than the limit supported by Command. Users are advised to add an environment variable, MOS_SIZE_LIMIT=16333, to their Newsroom Management system so these large items will be flagged with monitor error when monitor is turned on. This variable applies to all MOS items.
∙ In a previous version, Newsroom Management inewsctc device has had to be manually restarted often. This is fixed. IN-4927 ∙ In a previous version, new users did not get updates in re-fresh queue. This is fixed. IN-5403 ∙ Previously, iNEWS workstations crashed intermittently, especially on machines with Maestro plugins.
This is fixed. IN-5346/5402 Changes between 2019.2 and 2019.6 ∙ Previously, force utility was missed from the utilities list in /exc/ server folder. This is now fixed. IN-4973 ∙ Previously, after doing a monitor load of stories to Command and locking the channel group, modifying a field in a news story that was auto-assigned to the non-default channel in Command would result in a duplicate clip appearing in Command. This is fixed. IN-4837 ∙ In previous versions, NRCS Tool connections to Newsroom Management used licensed "general" session rather than non-licensed "aiws" session. This is fixed now. IN-4199 ∙ With the introduction of UUID in version 6.0, stories copied to other queues, which were assigned new UUIDs, no longer linked back to corresponding stories in the original queue. This is now fixed. IN-4618 ∙ Previously, presenter (P), machine control (M), and closed captioning (CC) text were printing in gray scale instead of colors defined in SYSTEM.STYLES queue. This is fixed. IN-4806 Version 2021.3 ReadMe ∙ In previous version, TXNET using polling fails to put order list to destination when all stories in the queue polled are deleted. This is fixed now. IN-4900 ∙ Previously, when a user wanted to modify a Viz production cue from an edit-locked story, it would warn of a story lock, but still open in browser mode although it would not allow any modification. Now, it will warn that the story is locked and not launch the activeX plug-in in the browser. IN-5103 ∙ Previously, a loud beeping sound would come from the PC’s internal speaker when accessing the Maestro plug-in at a Newsroom Management workstation. This is fixed. IN-4998 ∙ Previously, inewsctc did not reflect group changes on fly, so adding/removing users from groups in SYSTEM.GROUPS queue stories did not follow to inewsctc restart in current functionality. Now, it does.
IN-5082 ∙ In the previous version, inewsctc would sometimes lock block 1 - the Directory ISAM. This is fixed now.
IN-5016 ∙ Previously, users were unable to log in after the workserver utility stopped on both news servers. This is fixed. IN-4801 ∙ Previously, when a fullwidth ampersand (&) was added to a story, that story would cause the crash of iNewsCOMU.dll in MOS Gateway. This is fixed. IN-4701 ∙ Previously, modification of a story would sometime record the wrong user ID in the MODIFY-BY field.
This is fixed. IN-4479 Changes between 2018.11 and 2019.2 ∙ In previous version, using the sendpassword job list command to send a key locked story via txnet doesn't work correctly. This is fixed now. IN-4611 ∙ In previous version, bioserver goes to 911$ prompt unexpectedly. This is fixed now. IN-4759 ∙ In previous version, multiple placeholders are created for the same story. This is fixed now. IN-4524 ∙ Previously, Show timing would display **:** on the countdown clock when the Play key was pressed in Command for a video clip just prior to the story being sync timed in iNEWS. This is fixed. IN-4621 ∙ In previous version, there is discrepancy between client and server calculation of audio time . This is fixed now. IN-4739 ∙ Previously, monitor server could sometimes terminate with a message “Monitor exiting: Out of memory (proc_mosItemReplace,0):…” in iNEWS logs. This is fixed now. IN-4800 Changes between 2018.9.2 and 2018.11 ∙ In previous versions, some channel assignments in stories with production cues were not updating properly from the newsroom client. This is fixed. IN-4248 and IN-4204 ∙ In previous versions, an error core file was generated on the server when a login was attempted with a username longer than 20 characters. This is fixed. IN-4222 Changes between 2018.9.1 and 2018.9.2 ∙ In previous version, using the sendpassword job list command to send a key locked story via txnet didn't work correctly. This is fixed now. IN-4611 ∙ In the previous version, TXNET sends production cues with uuids even when earlier NSML formats are specified in the job list for the txnet device. This is now fixed. IN-4575 Changes between 2018.9 and 2018.9.1 ∙ In a previous version, a story creation error would be displayed if a production cue was added via the CG Titling tool. This is fixed. IN-4326 Changes between 2018.6.1 and 2018.9 ∙ Previously, stories with blank create-date or modify-date in client would not index. This is fixed. IN-4198 Version 2021.3 ReadMe ∙ Previously, sending email via an action server (mailto) would not send story body data. This is fixed. IN- ∙ In this version of Newsroom Management, the “Configure” program usage has been updated with the removal of obsolete items. IN-4153 ∙ In previous version, iNEWS server installed with the default line in /site/dict/words “W_MCS_BASE_URL /https://mediacentralsearch/”. In this version, this has changed to “W_MCS_BASE_URL /https://mediacentralsearch/search”.
Documentation Errata for v2018.9 ∙ In v2018.6 version of the MediaCentral Newsroom Management Setup Configuration Guide, page 469, information related to MediaCentral search configuration was given as follows:
W_MCS_BASE_URL /https://mediacentralsearch/ This was changed in v.2018.9, so it should now be:
W_MCS_BASE_URL /https://mediacentralsearch/search Changes between 2018.6 and 2018.6.1 ∙ In previous version, after setting up the configuration for CloudUX on the iNEWS side, folders were visible, but any attempt to open a queue or story would result in an error indicated that the server could not be located. This is fixed now. IN-4191 Changes between 2017.2 and 2018.6 ∙ In previous version, if the NSML which the server received from the client has duplicate "idref" and "ae id" numbers, then user could not save such story after editing. This is fixed now. IN-2434 ∙ In previous version, when using the "TRANSMIT" option in the wire distribution story, a duplicate priority code is added to the distribution code and the output of a "list q-x" of that WIRES queues showing the extra character. This is fixed now.IN-2179 ∙ In previous version, custom configurations using the -e option to point to /site/env/rxnet to specific nsml version was broken. This is fixed now. IN-3823 ∙ In previous version, unload one MOS device affected other loaded MOS device in "Choice" configuration.
This is fixed now. IN-3600 ∙ Previously, there was a memory fragmentation issue with bio server that caused it to consume a lot of memory. This is fixed. IN-2686 ∙ In previous version, "create-date" field got erased if mail was sent to group of users. This is fixed. IN-3502 ∙ After upgrade to version 2017.2, some HTML files would be formatted incorrectly. This is fixed. IN-3504 ∙ In previous versions, changes in a refresh queue were not received by community users. This is fixed. IN- ∙ In previous version, opening large rundown with refresh trait followed to graying out new story and print story icons on main toolbar for long time. This is fixed now. IN-3624 ∙ In previous versions, users experienced stories with Low link counts and "story open" errors in PRELIM queues. This is fixed. IN-3834 ∙ Previously, when MOS items were dragged and dropped into the story, the activeX app information was saved and could subsequently be used to re-launch the item. When creating placeholder, since no activeX information was available, such operation was disabled. Now, the client is changed to enable such operation if the MOS item is subsequently modified to include such information with MOS Gateway 4.5 or mosItemReplace workflow. IN-1082 ∙ Previously, story grouping would stop working after printing a selection of stories. This is fixed. IN-3664 ∙ In previous versions, the client didn't properly display the order of a sorted (remote) queue when the user entered a new story in the remote queue. This is fixed. IN-3820 ∙ In previous versions, a Connect to Service dialog would go to a Login screen instead of prompting for password. This is fixed. IN-3503 Version 2021.3 ReadMe Changes between 2017.1 and 2017.2 ∙ Beginning with this version, the system formerly known as Avid iNEWS is now called MediaCentral Newsroom Management. Likewise, the servers are now called Newsroom Management Servers, but computers running the client software are still called iNEWS Workstations.
∙ In previous versions, typing in iNEWS stories containing many, many hyperlinks resulted in very sluggish typing of new text. This is fixed. IN 1828 ∙ In previous versions, a Ctrl-F search involving the create-date or modify-date field, might result in an error that caused the user interface to freeze, requiring user to restart the client. This is fixed. IN-176005 ∙ In previous versions, dbrestore of a version 2.1 database failed. This is fixed, IN-3387 ∙ In previous versions, font and point size changed when overwriting production cue text. This is fixed. IN- ∙ In previous version, iNEWS client throws an error when logging out with Show Versions workspace open.
This is fixed. IN-2260 ∙ In previous version, there was a problem that under specific scenario, the Backup Command server was monitor loaded, when the Primary Command servers were expected to be loaded. This is fixed. IN-3386 ∙ In previous version, NRCS Tool in Media Composer doesn't display main level directory in iNEWS. This is fixed now. IN-3270 Changes between 6.1 and 2017.1 ∙ In previous versions, an external user might be unable to log in for several minutes after his or her user traits are modified. This is fixed. IN-2762 ∙ In previous versions, when a user modified the body or story form of an iNEWS story, video items in production cues were temporarily deleted and re-added, changing channels to the default and causing issues with cued and playing items in that story. This has been fixed. IN-2530 ∙ This version has the monitor changes that fixed the multiple/jumping green line issues in Command when editing items in a story that has items being played IN-2837 ∙ In previous versions, users experienced problems dragging and docking toolbars when multiple workspaces were open. This is fixed. IN-1579 ∙ In previous version, bioserver could terminate unexpectedly after server reboot and/or during startup of services in A/B system configuration. This is fixed. IN-2677 ∙ In previous versions, there was a problem dragging toolbar and docking toolbar with multiple workspaces opened. This is fixed. IN-1579 ∙ Client crashes if all stories are copied from a queue to a local database. This is fixed. IN-2574 ∙ In previous versions, iNEWS CTC—the iNEWS adapter for the Connectivity Toolkit Media Suite (CTMS)—would not reconnect to MediaCentral if MediaCentral restarted. Users needed to manually restart the adapter, inewsctc. The issue is fixed in Avid MediaCentral 2.10.2 with this version. IN-2920 ∙ In this version of iNEWS, the dictionary token W_BINDBUS in /site/dict/words is no longer used to define the connection to the busserver for the mediaindex service in iNEWS.
The mediaindex service now uses the same setting the CTMS service uses to define the IP and port of the MediaCentral server.
Namely: W_ACS_GATEWAY_HOST /<IP address> W_ACS_GATEWAY_PORT /9900 ∙ In previous version, using searchtape to restore stories could not restore or create UUIDs. This is fixed.
∙ In this version of iNEWS, the dbrestore utility has a new flag to allow stories to be written back into the system more than once, to different locations. If there are stories of the same UUID, a new UUID will be assigned to the restored stories.
RH7-A# dbrestore Usage: dbrestore <key> [option…] Key may contain :
s Or d – restore stories only OR directories and stories p – restore project files Version 2021.3 ReadMe i – restore ISAM files v – verbose, list directory names vv – as v but list EACH slug also x – ask before restoring each ISAM file f – print facts about blocks and times u – restore story more than once, even if that UUID present
- – print table of contents, don’t restore
Must be superuser to list ISAM files Microsoft Windows Critical Updates Avid recognizes that it is very important to be able to deploy Microsoft security patches to our Windows- based products as quickly as possible. We recommend that systems be kept up to date in order to maintain the highest level of security and encourage you to install all critical operating system updates provided by Microsoft.
In the unlikely event that one of these updates causes an issue, it is recommended that you uninstall the update and contact Avid customer support as soon as possible. Avid will investigate the incompatibility and if necessary, will provide a software update or work around to allow our products to properly function with the Microsoft update in question.
Documentation Errata Setup Configuration Guide ∙ In past versions of the MediaCentral Newsroom Management Setup Configuration Guide, in the Forms chapter, a product integration section erroneously identified the product as MediaCentral | Cloud UX. It should have been MediaCentral | UX. This has been fixed in the section now titled, “MediaCentral | UX Integration”.
Known Issues and Limitations Data Receiver and Wire Services ∙ Stopping a wire instance using the Avid Data Receiver Administration application does not remove the entry from the "list s" output (T/U Index file).
Workaround:
Reserve wire instances by configuring generic sessions in the /site/config to the IP address(es) of the Data Receiver.
iNEWS SendMail ∙ With new security measures enabled in the Gmail relay server, mail from iNEWS through sendmail will be rejected.
Workaround:
For instructions on how to address this issue by configuring the Gmail SMTP relay server for sendmail, please see the section Configure Gmail SMTP Relay Server for Sendmail later in this ReadMe.
Version 2021.3 ReadMe MAP Story Limit ∙ The limit of devices for a rundown in the MAP story is 20. Having more than 20 devices configured for a rundown in the MAP story will result in a client crash when attempting to open the Monitor dialog.
CloudUX Integration ∙ If a Newsroom Management user name is used on two or more different computers to log into CloudUX, it will only show as a single session in MediaCentral Newsroom Management.
Edit Locks ∙ Information about edit locks may contain a session identifier if the username is not known. This is the case for locks acquired though inewsctc API.
∙ Information about a user who has an edit lock could be incorrect when the user signs off without releasing edit locks and signs on, reusing the same session.
Note: The new user does not have the edit lock, and the lock will expire in its pre-defined timeout.
RedHat/CentOS 75 ∙ Autostop of misconfigured services does not work in RedHat/CentOS 75 environment.
Netstation ∙ Fields carried over from Avid Netstation template are skipped from indexing. IN-3269 Chinese IME Mode ∙ Avid recommends do not use key strokes in Chinese IME mode.
Localhost Server ∙ It is recommended to use localhost IP address "127.0.0.1" instead of alias "localhost" in case of telnet connection to localhost server.
Console ∙ iNEWS console is no longer supported by default, and this link provides information for console support:
For how to setup serial console in RH7, see https://access.redhat.com/documentation/en- US/Red_Hat_Enterprise_Linux/7/html/System_Administrators_Guide/sec- GRUB_2_over_a_Serial_Console.html Diskcopy reports CRITICAL error ∙ If diskcopy reports messages “diskcopy: 17:09:59 [CRITICAL] first block mirror error: on block 66958 (5:Input/output error)” Users should check the message at the end of the log for actual status. “Successful
  - Disk is mirrored” indicates that the process completed successfully, and the error only indicates that there
are empty blocks that could not be copied.
Divehi Support ∙ With the new richedit control, sometimes the last line of text will align to the left for a right-aligned story.
Chinese Localization Issue ∙ Chinese input method DaYi cannot be used to create new queues or folders.
German Localization Issue ∙ Using Ctrl+Shift+Right Arrow incorrectly marks a word if that word begins with a German Umlaut (ä, Ä, ö, Ö, etc.) a diacritic symbol over vowels, regardless of case.
Version 2021.3 ReadMe Local Database ∙ To download print styles and story forms to your local computer for use when working offline, you must have Read Access to the iNEWS System directories where styles and forms are located. This is by design.
Windows 7 and Windows 8 with UAC Enabled ∙ When User Access Control (UAC) is turned on, users cannot drag-and-drop text from an outside application, such as Microsoft Word, into iNEWS.
Workaround:
∙ Use Ctrl+C and Ctrl+V to copy and paste the text between applications.
External Users (LDAP) ∙ Beginning with version 4.x, Avid iNEWS server allows user authentication via Windows Active Directory; however, external users are not compatible with the following clients:
∙ iNEWS Workstations earlier than 4.0.0 ∙ FTP clients: teleprompters, NewsCutter’s NRCS Tool ∙ COM clients: NewsCutter's NRCS Tool; Instinct; MOS Gateway's roStorySend and mosObj.
∙ Web Client ∙ Web Access ∙ Interplay Central client earlier than 1.3.0 Plug-ins ∙ Some plug-ins, such as AMG Journalist, will not paint correctly in iNEWS.
Workaround:
To resolve the painting problem issue, use the following procedure.
Note: AMG Journalist is used in the procedure as a plug-in example.
1. In the iNEWS executable directory, create a new text file named ActiveXRedraw.txt.
• For 64 bit workstations, the directory is located at: C:\Program Files (x86)\Avid\iNEWS\ • For 32 bit workstations, the directory is located at: C:\Program Files\Avid\iNEWS\
2. Open the registry editor, using regedit in the Run dialog box.
3. Select Edit > Find > AMG Journalist and locate the CLSID for the plug-in.
• For 64 bit workstations, the CLSID is located at:
Computer\HKEY_CLASSES_ROOT\Wow6432Node\CLSID\ • For 32 bit workstations, the CLSID is located at:
Computer\HKEY_CLASSES_ROOT\CLSID\ Version 2021.3 ReadMe
4. Take the CLSID, which is the folder name, and put it into the ActiveXRedraw.txt file.
5. Save the file.
6. Reload iNEWS. The painting problem for plug-ins like AMG Journalist will be resolved.
UNC Paths ∙ As a result of the server-side URL changes in iNEWS 3.4.2, UNC paths with spaces no longer work correctly in the iNEWS client software. In a future version of the iNEWS client software, these links will be client-only, allowing a user to launch them from the iNEWS Workstation without saving them as URLs on the iNEWS Server.
∙ iNEWS integration with Intelliscribe printing should be configured at 300 DPI with "Enhanced Features" disabled. Setting a higher DPI or enabling enhanced features can cause long delays in printing.
∙ There are screen painting issues when the Vertigo Xmedia plug-in and the Aurora Assignment List plug-in (version 7 or later) are both installed on the same client. The Xmedia splash screen can cause the Xmedia tree to be inaccessible.
Workaround: When this issue occurs, the workaround is to rename or remove skinCrafter3_vs2008.dll from the Assignment List installation directory.
iNEWS Web Services API ∙ The iNEWS Web Service API cannot be undeployed via the Tomcat management interface when Tomcat is running on a Windows host.
To undeploy in Windows:
1. Stop the Tomcat service
2. Delete the inewswebservice file and folder from the Tomcat webapps directory.
3. Place the new .war file into the webapps directory.
Version 2021.3 ReadMe
4. Start the Tomcat service.
Note:Undeployment through the management interface works correctly if the Tomcat service is running on a Linux host.
Multiple Monitors ∙ If running the iNEWS client software on a dual monitor workstation, there are some key issues you could encounter:
∙ If the application is maximized when closed, it will be maximized on the primary monitor when it is reopened, regardless of which monitor it was on when closed.
∙ Moving a user from a dual monitor machine to a single monitor machine, such as an undocked laptop, could result in the application opening to a screen that no longer exists.
Workaround: Right click on iNEWS in the Windows taskbar and select Move. Then press one of the arrow keys on the keyboard; this will lock the application’s window to the mouse. You can then move the mouse pointer onto the screen and the iNEWS main window will move with it.
Macros and Keystrokes ∙ Some PCs, when upgraded from Internet Explorer 6 to Internet Explorer 7 or 8, will experience issues with macros that perform several functions in rapid succession; the macros might not complete all assigned activity in iNEWS. Avid is working with Microsoft on this issue, which is most apparent with macros that trigger the Local Print dialog box or the User Preferences dialog box.
Workaround: Place the name of the dialog box after the K_WINDOW token value immediately following the keystroke that opens the dialog box. For instance, instead of just {ctrl p} to open the Local Print dialog, the macro should be: {ctrl p}{window Local Printing}. The text following ‘window’ must match exactly the name of the dialog box as it appears in the title bar. The ‘K_WINDOW /window’ token can be changed in /site/dict/keymacros.
Another available workaround is to add {pause <#>} statements of one or two seconds to problem macros at the point in the macro where activity ceases. In the example of the Local Printing macros, the pauses are likely needed when typing a name of a printer or changing a print style.
Version 2021.3 ReadMe Configure Gmail SMTP Relay Server for Sendmail Configuring the Gmail SMTP relay server for sendmail involves generating a Gmail application password, updating the sendmail configuration, and adding lines to an authinfo file. The steps for these are in following subsections of this readme, but first:
WARNING: Before you start modifying sendmail configuration files you must add the following lines to the /etc/mail/sendmail.mc file to not lose the iNEWS mailing configuration.
define(`ALIAS_FILE', `/site/.mail/aliases')dnl dnl MAILER_DEFINITIONS ################################### iNEWS Server Mailer R$+<@LOCAL> $@$1 delete LOCAL R$+<@$-.LOCAL> $@$1<@$2> delete .LOCAL R$+<@$=w> $@$1 delete local hostname R<@> $n errors to mailer-daemon CPnews Mnews, P=/exc/newsmail, F=DFhlmnsu, S=news, R=news, A=newsmail -j $j $f $u Snews ################################### iNEWS Server Mailer dnl dnl LOCAL_NET_CONFIG ################################### iNEWS Server Mailer R$*<@local.news.> $#news$@$w$:$1 user@local.news ################################### iNEWS Server Mailer dnl Install Dependencies # yum install cyrus-sasl-plain Generate Gmail Application Password To generate a Gmail application password:
1. Log in to you Gmail account and go to the Manage you Google Account page.
2. Go to the Security page.
3. Enable 2-Step Verification if it is not enabled yet.
4. Click on the App passwords link.
5. In the Select app drop-down menu, select Mail.
6. In the Select device drop-down menu, select Other.
7. Enter the name for your application, such as iNEWS.
8. Click GENERATE.
9. Copy your password from the pop-up window.
Update sendmail configuration To update the sendmail configuration:
➢ Add the following lines to the /etc/mail/sendmail.mc file before the MAILER(smtp)dnl line:
define(`SMART_HOST',`[smtp.gmail.com]')dnl define(`RELAY_MAILER_ARGS', `TCP $h 587')dnl define(`ESMTP_MAILER_ARGS', `TCP $h 587')dnl Version 2021.3 ReadMe define(`confCACERT_PATH', `/etc/pki/tls/certs')dnl define(`confCACERT', `/etc/pki/tls/certs/ca-bundle.crt')dnl define(`confAUTH_OPTIONS', `A p')dnl define(`confAUTH_MECHANISMS', `EXTERNAL GSSAPI DIGEST-MD5 CRAM- MD5 LOGIN PLAIN')dnl TRUST_AUTH_MECH(`EXTERNAL DIGEST-MD5 CRAM-MD5 LOGIN PLAIN')dnl FEATURE(`authinfo',`hash -o /etc/mail/authinfo.db')dnl Modify the AuthInfo File To modify the AuthInfo file:
➢ Add the following lines to the /etc/mail/authinfo file.
AuthInfo: "U:root" "I:EMAIL" "P:PASSWORD" Replace the above 'EMAIL' and 'PASSWORD' with your actual Gmail email and application password.
You may now generate the final sendmail configuration and restart the service by entering the following commands as a root:
# cd /etc/mail # make # systemctl restart sendmail.service Version 2021.3 ReadMe Technical Support Information Most products feature a number of coverage options. Avid Assurance service offerings are designed to facilitate your use of Avid solutions. Service options include extended telephone coverage, automatic software maintenance, extended hardware warranty, and preferred pricing on replacement parts. Offerings and options may vary by product and are not available for all products.
For more information regarding Avid service offerings, visit www.avid.com/support or call Avid Sales at 800-949-AVID (800-949-2843).
Program availability and details might vary depending on geographic location and are subject to change without notice. Contact your local Avid office or your local Avid Reseller for complete program information and pricing. However, if you need help locating an Avid office or Avid Reseller near you, please visit www.avid.com or call in North America 800-949-AVID (800-949-2843). International users call 978-275-2480.
Accessing Online Support Avid Online Support is available 24 hours per day, 7 days per week. Search the Knowledge Base to find answers, to view error messages, to access troubleshooting tips, to download updates, and to read/join online message-board discussions.
To access Avid Online Support:
➢ Go to www.support.avid.com .
Note: Supplemental documentation for this release, if available, is provided on the Knowledge Base. For the latest up-to-date information, browse the Knowledge Base at Avid Online Support.
Version 2021.3 ReadMe Copyright and Disclaimer Product specifications are subject to change without notice and do not represent a commitment on the part of Avid Technology, Inc.
The software described in this document is furnished under a license agreement. You can obtain a copy of that license by visiting Avid's Web site at www.avid.com. The terms of that license are also available in the product in the same directory as the software. The software may not be reverse assembled and may be used or copied only in accordance with the terms of the license agreement. It is against the law to copy the software on any medium except as specifically allowed in the license agreement.
No part of this document may be reproduced or transmitted in any form or by any means, electronic or mechanical, including photocopying and recording, for any purpose without the express written permission of Avid Technology, Inc.
Copyright © 2021 Avid Technology, Inc. and its licensors. All rights reserved.
U.S. GOVERNMENT RESTRICTED RIGHTS. This Software and its documentation are “commercial computer software” or “commercial computer software documentation.” In the event that such Software or documentation is acquired by or on behalf of a unit or agency of the U.S. Government, all rights with respect to this Software and documentation are subject to the terms of the License Agreement, pursuant to FAR §12.212(a) and/or DFARS §227.7202-1(a), as applicable.
Adrenaline, AirSpeed, ALEX, Alienbrain, Archive, Archive II, Assistant Avid, Avid Unity, Avid Unity ISIS, Avid VideoRAID, CaptureManager, CountDown, Deko, DekoCast, FastBreak, Flexevent, FXDeko, iNEWS, iNEWS Assign, iNEWS ControlAir, Instinct, IntelliRender, Intelli-Sat, Intelli-sat Broadcasting Recording Manager, Interplay, ISIS, IsoSync, LaunchPad, LeaderPlus, ListSync, MachineControl, make manage move | media, MediaCentral, Media Composer, NewsCutter, NewsView, OMF, OMF Interchange, Open Media Framework, Open Media Management, SIDON, SimulPlay, SimulRecord, SPACE, SPACEShift, Sundance Digital, Sundance, Symphony, Thunder, Titansync, Titan, UnityRAID, Video the Web Way, VideoRAID, VideoSPACE, VideoSpin, and Xdeck are either registered trademarks or trademarks of Avid Technology, Inc. in the United States and/or other countries.
All other trademarks contained herein are the property of their respective owners.
MediaCentral | Newsroom Management v2021.3 (v7.8) ReadMe • 10 May 2021 This document is distributed by Avid in online (electronic) form only, and is not available in printed form.